# Maritime-Autonomous-Systems-Simulator

./: .gitignore  README.md
.github/workflows/: usv_hydro_ci.yml
docs/: usv_hydro_physics_report.tex  usv_hydro_physics_report_en.tex
usv_sim_ws/src/usv_description/: CMakeLists.txt  package.xml
usv_sim_ws/src/usv_description/launch/: spawn_usv.launch.py
usv_sim_ws/src/usv_description/sdf/: usv_minimal.sdf
usv_sim_ws/src/usv_gazebo/: CMakeLists.txt  package.xml
usv_sim_ws/src/usv_gazebo/launch/: sim_usv.launch.py
usv_sim_ws/src/usv_gazebo/worlds/: calm_sea.sdf  hydrostatic_stiffness_ab.sdf
usv_sim_ws/src/usv_hydro/: CMakeLists.txt  package.xml
usv_sim_ws/src/usv_hydro/config/: hydro_profiles.yaml  seakeeping_coeffs_example.yaml
usv_sim_ws/src/usv_hydro/include/usv_hydro/: BuoyancyModel.hh  DragModel.hh  EnvironmentModel.hh  HydroIntegrator.hh  HydroTypes.hh
usv_sim_ws/src/usv_hydro/src/: BuoyancyModel.cc  DragModel.cc  EnvironmentModel.cc  HydroCellSystem.cc  HydroIntegrator.cc  HydroTypes.cc
usv_sim_ws/src/usv_hydro/test/: hydro_models_test.cc
usv_sim_ws/src/usv_hydro/tools/: estimate_coeffs.py  generate_validation_plots.py
usv_sim_ws/src/usv_hydro/tools/coeff_estimator/: __init__.py  bem_solver.py  geometry_loader.py  requirements.txt  viscous_drag_estimator.py  yaml_writer.py
usv_sim_ws/src/usv_hydro/validation_output/: current_cancellation.csv  hydrostatic_equilibrium.csv  hydrostatic_stiffness.csv  summary.json  surge_decay.csv  symmetry_moments.csv
